<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="12dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:text="@string/result"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/etFirsNum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/first_num"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/etSecondNum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/second_num"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnCalculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:text="@string/calculate" />


</LinearLayout>